<resources>
    <string name="app_name">WorkoutProgressTracker</string>
    <string name="username_hint">    username</string>
    <string name="password_hint">    password</string>
    <string name="login">Login</string>

    <string name="calendarTabTitle">Calendar</string>
    <string name="workoutsTabTitle">Workouts</string>
    <string name="exercisesTabTitle">Exercises</string>
    <string name="plus">+</string>
    <string name="exerciseName">Exercise</string>
    <string name="loadingData">Loading more data...</string>
    <string name="new_exercise_name_hint">exercise name</string>
    <string name="create">create</string>
    <string name="spinner_title">Muscle group:</string>
    <string name="done">Done</string>
    <string name="delete">Delete</string>
    <string name="example1">Ex: Weight 80 lbs</string>
    <string name="example2">Ex: Reps 12</string>
    <string name="muscle_group">Muscle group</string>
    <string name="metrics">Metrics</string>
    <string name="exercise_name">Exercise name</string>
    <string name="save">Save</string>
    <string name="add_workout">Add workout</string>
</resources>