<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="450dp"
        android:orientation="vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        tools:ignore="MissingConstraints">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:layout_marginTop="15dp">

    <TextView
        android:id="@+id/new_exercise_title"
        android:layout_width="279dp"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:layout_marginBottom="10dp"
        android:padding="0dp"
        android:text="@string/exercise_name"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/exercise_title_input"
        android:layout_width="match_parent"
        android:layout_margin="0dp"
        android:layout_weight="0"
        android:inputType="text"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_height="35dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/muscle_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="10dp"
            android:padding="0dp"
            android:text="@string/muscle_group"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="20sp" />
        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="5dp"
            android:prompt="@string/spinner_title"/>

    </LinearLayout>

        <TextView
            android:id="@+id/measured_by_"
            android:layout_width="170dp"
            android:layout_height="30dp"
            android:layout_margin="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:text="@string/metrics"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            android:paddingBottom="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:orientation="horizontal"
                android:layout_marginBottom="15dp">

                <Spinner
                    android:id="@+id/spinner_first_option"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:prompt="@string/spinner_title"/>

                <EditText
                    android:id="@+id/objective_value"
                    android:layout_width="30dp"
                    android:layout_height="40dp"
                    android:hint="12"
                    android:paddingBottom="5dp"/>

                <Spinner
                    android:id="@+id/spinner_first_option_metric"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:prompt="@string/spinner_title"
                    android:gravity="right"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#c0c0c0"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:orientation="horizontal"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="10dp">

                <Spinner
                    android:id="@+id/spinner_second_option"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:prompt="@string/spinner_title" />

                <EditText
                    android:layout_width="30dp"
                    android:layout_height="40dp"
                    android:id="@+id/goal_value"
                    android:hint="45"
                    android:paddingBottom="5dp"/>

                <Spinner
                    android:id="@+id/spinner_second_option_metric"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:prompt="@string/spinner_title"
                    android:gravity="right"/>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/create_button"
            android:layout_width="157dp"
            android:layout_height="38dp"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/basic_button"
            android:text="@string/create"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.555"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="MissingConstraints" />

    </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>