<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="500dp">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="500dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

    <EditText
        android:id="@+id/workout_title"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textStyle="bold"
        android:textSize="25dp"
        tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/add_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/add_button"
            android:text="@string/plus"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#000000"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/exercisesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"/>
        <!--tools:layout_editor_absoluteX="159dp"-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/done_button"
            android:layout_width="100dp"
            android:layout_height="38dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/basic_button"
            android:backgroundTint="#d8d9f2"
            android:text="@string/delete"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.555"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/delete_button"
            android:layout_width="100dp"
            android:layout_height="38dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/basic_button"
            android:backgroundTint="#d8d9f2"
            android:text="@string/done"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.555"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="MissingConstraints" />

    </LinearLayout>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>